# Fluxion.Net.FusionUI

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.claude/: settings.local.json
CMake/: FusionPlatform.cmake  Resources.cmake  Shaders.cmake  Targets.cmake  Tests.cmake  ThirdParty.cmake
CMake/Scripts/: EmbedResource.cmake
Docs/: FusionPlan.md
FusionCore/: CMakeLists.txt
FusionCore/Include/Fusion/: Core.h  FusionCore.h
FusionCore/Include/Fusion/Algorithm/: Hash.h
FusionCore/Include/Fusion/Containers/: Array.h  HashMap.h  Name.h  StableGrowthArray.h  StaticArray.h  String.h  StringView.h  Uuid.h
FusionCore/Include/Fusion/Delegates/: Delegate.h  Event.h  Signal.h
FusionCore/Include/Fusion/Image/: Image.h
FusionCore/Include/Fusion/Log/: Log.h
FusionCore/Include/Fusion/Math/: AffineTransform.h  Color.h  Mat4.h  Math.h  Rect.h  Vec2.h  Vec4.h
FusionCore/Include/Fusion/Misc/: Assert.h  CoreDefines.h  CoreMacros.h  CoreTypes.h  Exception.h  Handle.h  IntrusivePtr.h  MemoryUtils.h  RTTI.h
FusionCore/Include/Fusion/Object/: Object.h  Ptr.h  Ref.h  RefCountBlock.h  Variant.h  WeakPtr.h  WeakRef.h
FusionCore/Include/Fusion/Templates/: Templates.h  TypeTraits.h
FusionCore/Source/: Core.cpp  FusionCore.cpp
FusionCore/Source/Algorithm/: Hash.cpp
FusionCore/Source/Containers/: String.cpp  StringView.cpp  Uuid.cpp
FusionCore/Source/Image/: Image.cpp
FusionCore/Source/Log/: Log.cpp
FusionCore/Source/Math/: Mat4.cpp
FusionCore/Source/Misc/: Assert.cpp
FusionCore/Source/Object/: Object.cpp  RefCountBlock.cpp
FusionCore/Tests/: CMakeLists.txt  FusionCoreTests.cpp
FusionPlatform/: CMakeLists.txt
FusionPlatform/Include/Fusion/: IPlatformBackend.h  Platform.h  PlatformTypes.h
FusionPlatform/Include/Fusion/Platform/: IPlatformBackend.h  IPlatformEvenSink.h  PlatformTypes.h
FusionPlatform/Source/: Platform.cpp
FusionPlatform/Tests/: CMakeLists.txt  Tests.cpp
FusionRHI/: CMakeLists.txt
FusionRHI/Include/Fusion/: RHI.h
FusionRHI/Include/Fusion/RHI/: IRenderBackend.h  RenderSnapshot.h  UIDrawData.h  UIDrawList.h
FusionRHI/Source/: RHI.cpp  UIDrawList.cpp
FusionRHI/Tests/: CMakeLists.txt  Tests.cpp
FusionResources/: CMakeLists.txt
FusionResources/Include/Fusion/: Resources.h
FusionResources/Source/: EmbeddedResources.cpp
FusionSDL3Platform/: CMakeLists.txt  fusionsdl3platform_private_files.cmake
FusionSDL3Platform/Include/Fusion/: SDL3Platform.h
FusionSDL3Platform/Source/: FusionSDL3Platform.cpp
FusionSDL3Platform/Source/PAL/: SDL3Platform.h
FusionSDL3Platform/Source/SDL3Platform/: SDL3PlatformBackend.cpp  SDL3PlatformWindow.cpp
FusionShaderLibrary/: CMakeLists.txt
FusionShaderLibrary/Include/Fusion/: ShaderLibrary.h
FusionShaderLibrary/Shaders/: Fusion.slang
FusionShaderLibrary/Shaders/Fusion/: Core.slang
FusionVulkanRHI/: CMakeLists.txt  fusionvulkanrhi_private_files.cmake
FusionVulkanRHI/Source/: Buffer.cpp  TextureAtlas.cpp  VulkanRHI.cpp  VulkanRHIPrivate.h  VulkanRenderBackend.cpp
FusionWidgets/: CMakeLists.txt
FusionWidgets/Source/: Widgets.cpp
Samples/: CMakeLists.txt
Samples/Sandbox/: CMakeLists.txt
Samples/Sandbox/Source/: Main.cpp
Samples/Source/: Main.cpp
Samples/TextSamples/: CMakeLists.txt
Samples/TextSamples/Source/: Main.cpp
Samples/TreeView/Source/: Main.cpp
(+107 files in other folders)
